[package]
name = "greenhorn"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.2"
markdown = "0.3"
tinytemplate = "1.2"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tower-http = { version = "0.1", features = ["trace"] }
thiserror = "1.0"
structopt = "0.3"